[gd_scene load_steps=6 format=2]

[ext_resource path="res://MonsterDice.tscn" type="PackedScene" id=1]
[ext_resource path="res://PlayerDice.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sounds/558119__abdrtar__dice.mp3" type="AudioStream" id=4]
[ext_resource path="res://UI.gd" type="Script" id=5]

[sub_resource type="StreamTexture" id=1]
load_path = "res://.import/dicebox.png-4c7643ceb277ad69b1333e7019a7b321.stex"

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="DiceBG" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -60.0
margin_right = 60.0
margin_bottom = 60.0
texture = SubResource( 1 )

[node name="MonsterDice" parent="DiceBG" instance=ExtResource( 1 )]
position = Vector2( 90, 30 )

[node name="PlayerDice" parent="DiceBG" instance=ExtResource( 2 )]
position = Vector2( 30, 30 )

[node name="DiceTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="DiceSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="timeout" from="DiceTimer" to="." method="_on_DiceTimer_timeout"]
